# qr_ticketing_with_payment

./: .env.example  .gitignore  Dockerfile  README.md  bookings_killer.py  configs.py  little_elista.conf  manage.py  nginx.conf  pyproject.toml  requirements.txt
booking/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
booking/migrations/: 0001_initial.py  0002_booking_selected_option.py  0002_zone_table_zone.py  0003_checkin.py
landing/: forms.py  urls.py  views.py
landing/templates/: base.html  booking.html  landing.html  landing_page.html  last_booking.html  login.html  register.html  scan.html  success.html
little_elista/: apps.py  asgi.py  settings.py  urls.py  wsgi.py
static/css/: elements.css  main.css
static/js/: booking.js  landing.js  price_update.js
